--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-dev": "webpack --mode development"
+    "build-dev": "webpack --mode development",
+    "start": "node src/server/app.js"
   },
   "repository": {
     "type": "git",
