--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "start-dev": "NODE_ENV=development node src/server/app.js",
     "start": "node src/server/app.js"
   },
   "repository": {
@@ -25,6 +27,7 @@
     "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.4",
+    "dotenv": "^10.0.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.37.0",
     "webpack-cli": "^4.7.0"
